--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "prettier": "1.15.3"
   }
 }
